--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+annotated-doc==0.0.4
+annotated-types==0.7.0
 anyio==4.12.1
 beautifulsoup4==4.14.3
 CacheControl==0.14.4
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 cryptography==46.0.3
 exceptiongroup==1.3.1
+fastapi==0.128.0
 firebase_admin==7.1.0
 google==3.0.0
 google-api-core==2.29.0
@@ -31,9 +35,14 @@ protobuf==6.33.4
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
 PyJWT==2.10.1
 requests==2.32.5
 rsa==4.9.1
 soupsieve==2.8.2
+starlette==0.50.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+uvicorn==0.40.0
